# hpde-analytics-cli

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  release-please-config.json  requirements.txt  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml  release-please.yml  sonarcloud.yml
hpde_analytics_cli/: __init__.py  main.py
hpde_analytics_cli/api/: client.py
hpde_analytics_cli/auth/: __init__.py  credentials.py  oauth.py
hpde_analytics_cli/integrations/: __init__.py  email_populator.py  google_sheets.py
hpde_analytics_cli/utils/: data_export.py  field_discovery.py  report_generator.py
tests/: conftest.py  test_client.py  test_credentials.py  test_data_export.py  test_email_populator.py  test_google_sheets.py  test_main.py  test_report_generator.py
