[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hpde-analytics-cli"
version = "2.0.0"
description = "Data analysis and reporting tool for HPDE and Time Trials programs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Kevin Homan", email = "homan13@gmail.com"}
]
keywords = [
    "motorsports",
    "hpde",
    "time-trials",
    "motorsportreg",
    "analytics",
    "reporting"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.28.0",
    "requests-oauthlib>=1.3.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.0",
    "keyring>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "pre-commit>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/Homan13/hpde-analytics-cli"
Documentation = "https://github.com/Homan13/hpde-analytics-cli#readme"
Repository = "https://github.com/Homan13/hpde-analytics-cli.git"
Issues = "https://github.com/Homan13/hpde-analytics-cli/issues"

[project.scripts]
hpde-analytics-cli = "hpde_analytics_cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hpde_analytics_cli*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312", "py313"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=hpde_analytics_cli --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
no_implicit_optional = false

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["hpde_analytics_cli"]
skip = ["venv", ".venv", "build", "dist"]

[tool.bandit]
exclude_dirs = ["tests", "venv"]
skips = ["B101"]  # Skip assert warnings in tests
